--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <body></body>
 <script>
-document.querySelector('body').textContent= location.search
+document.querySelector('body').textContent= decodeURI(location.search);
 </script>
